@@ -208,6 +208,8 @@ class ImportTests(unittest.TestCase):
             self.assertIsNot(orig_getenv, new_os.getenv)
 
     @support.cpython_only
+    @unittest.skipIf(not hasattr(imp, 'load_dynamic'),
+                     'imp.load_dynamic() required')
     def test_issue15828_load_extensions(self):
         # Issue 15828 picked up that the adapter between the old imp API
         # and importlib couldn't handle C extensions
@@ -229,6 +231,19 @@ class ImportTests(unittest.TestCase):
             imp.load_dynamic(name, path)
         self.assertIn(path, err.exception.path)
         self.assertEqual(name, err.exception.name)
+
+    @support.cpython_only
+    @unittest.skipIf(not hasattr(imp, 'load_dynamic'),
+                     'imp.load_dynamic() required')
+    def test_load_module_extension_file_is_None(self):
+        # When loading an extension module and the file is None, open one
+        # on the behalf of imp.load_dynamic().
+        # Issue #15902
+        name = '_heapq'
+        found = imp.find_module(name)
+        assert found[2][2] == imp.C_EXTENSION
+        found[0].close()
+        imp.load_module(name, None, *found[1:])
 
 
 class ReloadTests(unittest.TestCase):
