@@ -44,6 +44,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #15902: Fix imp.load_module() accepting None as a file when loading an
+  extension module.
+
 - Issue #17802: Fix an UnboundLocalError in html.parser.  Initial tests by
   Thomas Barlow.
 
